--- a/sass/nav/_mobile-menu-button.scss
+++ b/sass/nav/_mobile-menu-button.scss
@@ -13,7 +13,7 @@
 	transition-property: right;
 	transition-duration: 0.15s;
 	transition-timing-function: linear;
-	z-index: 2;
+	z-index: $menu-z-index;
 	
 	&:focus {
 		outline: 0;
